[gd_scene load_steps=10 format=3 uid="uid://5knw57kw5ml4"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_6avjx"]
[ext_resource type="PackedScene" uid="uid://brc7pxqrr0wkv" path="res://Scenes/Player/Player.tscn" id="2_8fhfb"]
[ext_resource type="PackedScene" uid="uid://cdrfw3w0vknif" path="res://Scenes/UI/bg_image.tscn" id="2_f62tv"]
[ext_resource type="Texture2D" uid="uid://djnhjuf23frn" path="res://Graphics/BG/Tartarus_BG_Bot_1x.png" id="3_8drvo"]
[ext_resource type="Script" path="res://Scripts/damage_test.gd" id="4_t60te"]
[ext_resource type="PackedScene" uid="uid://bdco14t17xasq" path="res://Scenes/Enemy/enemy_scene.tscn" id="6_6v8og"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmem2"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7osx6"]
size = Vector2(70.75, 847)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsvdn"]
size = Vector2(1337, 80)

[node name="Level" type="Node2D"]
script = ExtResource("1_6avjx")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TR_BG_Image" parent="Control" instance=ExtResource("2_f62tv")]
layout_mode = 1
bg_texture = ExtResource("3_8drvo")
up_bg_texture = ExtResource("3_8drvo")
down_bg_texture = ExtResource("3_8drvo")

[node name="Enemy_Scene" parent="Control" instance=ExtResource("6_6v8og")]
layout_mode = 1

[node name="Damage" type="Area2D" parent="Control"]
script = ExtResource("4_t60te")

[node name="ColorRect" type="ColorRect" parent="Control/Damage"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 505.0
offset_top = 325.0
offset_right = 555.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.602072, 0.000258558, 0.59987, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Damage"]
visible = false
position = Vector2(530, 350)
shape = SubResource("RectangleShape2D_mmem2")

[node name="Player1" parent="Control" instance=ExtResource("2_8fhfb")]
unique_name_in_owner = true
layout_mode = 1

[node name="Borders" type="Node2D" parent="."]
visible = false

[node name="BordersBody" type="StaticBody2D" parent="Borders"]
collision_layer = 17
collision_mask = 17

[node name="RightBorder" type="CollisionShape2D" parent="Borders/BordersBody"]
position = Vector2(1316, 360)
shape = SubResource("RectangleShape2D_7osx6")

[node name="LeftBorder" type="CollisionShape2D" parent="Borders/BordersBody"]
position = Vector2(-35, 360)
shape = SubResource("RectangleShape2D_7osx6")

[node name="TopBorder" type="CollisionShape2D" parent="Borders/BordersBody"]
position = Vector2(637.5, -50)
shape = SubResource("RectangleShape2D_gsvdn")

[node name="BottomBorder" type="CollisionShape2D" parent="Borders/BordersBody"]
position = Vector2(640, 769)
shape = SubResource("RectangleShape2D_gsvdn")

[node name="sec_timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Control/Damage" to="Control/Damage" method="_on_body_entered"]
[connection signal="timeout" from="sec_timer" to="." method="_on_timer_timeout"]
